manifests/prod/s3-console/Namespace-s3-console.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: s3-console
