manifests/prod/s3-console/Service-s3-console.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-console
  namespace: s3-console
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9001
  type: ClusterIP
