manifests/prod/s3-console/Ingress-s3-console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: k3s-lan-ca
    gethomepage.dev/description: rustfs web console
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: DevOps
    gethomepage.dev/icon: mdi-database
    gethomepage.dev/name: s3-console
    gethomepage.dev/siteMonitor: http://s3-console.s3-console.svc.cluster.local/rustfs/console
  name: s3-console
  namespace: s3-console
spec:
  ingressClassName: traefik
  rules:
    - host: s3-console.k3s.lan
      http:
        paths:
          - backend:
              service:
                name: s3-console
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - s3-console.k3s.lan
      secretName: s3-console-tls
